# DSAProject3

./: CMakeLists.txt  README.md  main.cpp  star.cpp  star.h
src/: ColorFader.h  PlayScreen.h  SelectScreen.h  SortScreen.h  SortVisualizationScreen.h  WelcomeScreen.h  interface_objects.h  main.cpp  main_interface.cpp  star.cpp  star.h
